--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "^4.21.2",
     "express-fileupload": "^1.4.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",,
+    "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.16",
     "uuid": "^8.3.2"
